refactor(test): перевести интеграционные тесты на реактивный стек
1) Осуществлен переход с MockMvc/блокирующего стека на WebTestClient в контроллерах для полноценной поддержки Spring WebFlux.